# retines-pupilles

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  IDEAS.md  PROJECT_STATE.md  ROADMAP.md  TASKS.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  mkdocs-docker-compose.yml  mkdocs.yml
_tasks/: chain-sprint-1.json  task-010-patient-list-filtering-pagination.md  task-013-frontend-auth-session-routing.md  task-014-frontend-patient-create-edit.md  task-015-frontend-patient-detail-page.md  task-016-backend-patient-search-hardening.md  tool-002-harden-local-codex-runner-windows-powershell.md
agent-monitor/: claude-hooks-config.json  monitor.py
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1f9d0fab9699_task_002_initial_persistence.py  8f2a4c6b1d3e_task_011_add_users_table.py  d77a09a3e6b0_task_004_add_patient_model.py
backend/app/: main.py
backend/app/api/: errors.py
backend/app/api/dependencies/: __init__.py  auth.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  health.py  patients.py
backend/app/core/: config.py  database.py  logging.py  security.py
backend/app/crud/: __init__.py  patient.py  user.py
backend/app/db/: base.py  mixins.py  session.py  types.py
backend/app/models/: __init__.py  patient.py  user.py
backend/app/schemas/: __init__.py  error.py  health.py  patient.py  user.py
backend/tests/: test_api_errors.py  test_auth_api.py  test_auth_dependencies.py  test_db_base.py  test_db_mixins.py  test_health_api.py  test_logging.py  test_patient_api.py  test_patient_crud.py  test_patient_model.py  test_patient_schemas.py  test_security.py  test_user_crud.py  test_user_model.py  test_user_schemas.py
docs/: 00-overview.md  (+4 more)
(+57 files in other folders)
