[project]
name = "retines-pupilles-backend"
version = "0.1.0"
description = "Backend API for Rétines & Pupilles — mini ERP/CRM for ED Optique Heusy"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "Fabian Hardy", email = "fabian.hardy@trendyfoods.com" }]

dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "pydantic-settings>=2.6.0",
    "asyncpg>=0.30.0",
    "redis[hiredis]>=5.2.0",
    "authlib>=1.3.2",
    "passlib[bcrypt]>=1.7.4",
    "dbfread>=2.0.7",
    "chardet>=5.2.0",
    "rapidfuzz>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
disallow_untyped_decorators = false
warn_return_any = false

[[tool.mypy.overrides]]
module = ["dbfread.*", "chardet.*", "authlib.*", "passlib.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
